--- a/style.css
+++ b/style.css
@@ -57,6 +57,9 @@
   box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
   z-index: 1000;
   border-radius: 5px;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
 }
 
 .dropdown-content li a {
@@ -186,6 +189,7 @@ body {
   gap: 10px;
  }
 }
+
 
 
 
